@@ -9,7 +9,34 @@ has DisplayName => (
     required => 1,
 );
 
+has JobTitle => (
+    is => 'ro',
+    isa => 'Str',
+);
+
+has CompanyName => (
+    is => 'ro',
+    isa => 'Str',
+);
+
+has BusinessHomePage => (
+    is => 'ro',
+    isa => 'Str',
+);
+
 has PhoneNumbers => (
+    is => 'ro',
+    isa => 'HashRef[ArrayRef]',
+    default => sub { {} },
+);
+
+has EmailAddresses => (
+    is => 'ro',
+    isa => 'HashRef[ArrayRef]',
+    default => sub { {} },
+);
+
+has PhysicalAddresses => (
     is => 'ro',
     isa => 'HashRef[ArrayRef]',
     default => sub { {} },
@@ -19,7 +46,9 @@ sub BUILDARGS {
     my ($class, @rest) = @_;
     my $params = (scalar @rest == 1 ? $rest[0] : {@rest});
 
-    $params->{'PhoneNumbers'} = _build_PhoneNumbers($params->{'PhoneNumbers'});
+    $params->{'PhoneNumbers'} = _build_Contact_Hashes($params->{'PhoneNumbers'});
+    $params->{'EmailAddresses'} = _build_Contact_Hashes($params->{'EmailAddresses'});
+    $params->{'PhysicalAddresses'} = _build_Biz_Hashes($params->{'PhysicalAddresses'});
 
     foreach my $key (keys %$params) {
         if (not ref $params->{$key}) {
@@ -30,17 +59,17 @@ sub BUILDARGS {
     return $params;
 }
 
-sub _build_PhoneNumbers {
-    my $numbers = shift;
+sub _build_Contact_Hashes {
+    my $values = shift;
     my $entries = {};
 
-    return {} if !exists $numbers->{'Entry'}
-                 or ref $numbers->{'Entry'} ne 'ARRAY'
-                 or scalar @{ $numbers->{'Entry'} } == 0;
+    return {} if !exists $values->{'Entry'}
+                 or ref $values->{'Entry'} ne 'ARRAY'
+                 or scalar @{ $values->{'Entry'} } == 0;
 
-    foreach my $entry (@{ $numbers->{'Entry'} }) {
-        next if !defined $entry->{'Key'}
-                or $entry->{'Key'} =~ m/(?:Fax|Callback|Isdn|Pager|Telex|TtyTdd)/i;
+    foreach my $entry (@{ $values->{'Entry'} }) {
+        next if !defined $entry->{'Key'};
+                #or $entry->{'Key'} =~ m/(?:Fax|Callback|Isdn|Pager|Telex|TtyTdd)/i;
 
         my $type = $entry->{'Key'};
         $type =~ s/(\w)([A-Z0-9])/$1 $2/g; # BusinessPhone -> Business Phone
@@ -48,6 +77,28 @@ sub _build_PhoneNumbers {
         # get numbers and set mapping to this name, but skip blanks
         next unless $entry->{'_'};
         push @{ $entries->{$type} }, $entry->{'_'};
+    }
+
+    return $entries;
+}
+
+sub _build_Biz_Hashes {
+    my $values = shift;
+    my $entries = {};
+
+    return {} if !exists $values->{'Entry'}
+                            or ref $values->{'Entry'} ne 'ARRAY'
+                            or scalar @{ $values->{'Entry'} } == 0;
+
+    foreach my $entry (@{ $values->{'Entry'} }) {
+        next if !defined $entry->{'Key'};
+        my $type = $entry->{'Key'};
+
+        while( my ($fieldname, $fieldvalue) = each %$entry ) {
+            $fieldname =~ s/(\w)([A-Z0-9])/$1 $2/g;
+            next unless $fieldvalue and $fieldname ne 'Key';
+            push @{ $entries->{"$type $fieldname"} }, $fieldvalue;
+        }
     }
 
     return $entries;
