@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+  * Add JobTitle, CompanyName, BusinessHomePage, EmailAddresses, and PhysicalAddresses
+    (Ron Tomassini)
+
 1.113000  2011-10-27 19:47:48 Europe/London
 
   * No longer attempt naive interpretation of Phone Numbers (M. Redinger)
